<resources>
    <string name="app_name">ImproseApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="school">Rose-\nHulman\nInstitute of\nTechnology</string>
    <string name="app_name_space">Improse App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sample">SampleText</string>
    <string name="LoginActivity">LoginActivity</string>
    <string name="text_welcome">Welcome to the Rose-Hulman
        \nInstitute of Technology Improse App.
        \nClick the Menu Bar in the corner
        \nto get started.</string>

    <string name="meeting_records">Meeting Records</string>
    <string name="games_list">Games List</string>
    <string name="view_stats">View Stats</string>
    <string name="sample_user">SampleUser</string>
    <string name="text_upcoming">Upcoming Events</string>
    <string name="attendance_title">Attendance</string>
    <string name="attendance_date_help">Insert the date of the meeting below:</string>
    <string name="attendance_date_hint">MM/DD/YYYY</string>
    <string name="attendance_name_help">Insert the name of the attendee:</string>
    <string name="attendance_button">Add</string>
    <string name="meeting_c_title">Meeting %s</string>
    <string name="members_c_present">Present Members:\n%s</string>
    <string name="meeting_c_games">Games Played:\n%s</string>
    <string name="back_button">Back</string>
    <string name="game_c_title">%s</string>
    <string name="game_c_description">Description:\n%s</string>
    <string name="placeholder">Dummy</string>
    <string name="stats_c_position">Position: %s</string>
    <string name="stats_c_activeness">Active?: %s</string>
    <string name="stats_c_meetings">Meetings been to: %s</string>
    <string name="stats_c_seen">Last seen: %s</string>
    <string name="stats_c_mostplayed">Most played game: %s</string>
    <string name="stats_c_username">Username: %s</string>
    <string name="suggestions_help">Got an idea for a game we can play?\nTell us here!</string>
    <string name="suggestions_title">Suggestions</string>
    <string name="suggestions_hint">Write Suggestion here ...</string>
    <string name="suggestions_submit">Submit</string>

    <string name="yee_haw">Yee-Haw</string>
    <string name="yee_haw_description">Description: Yee-Haw begins with all members in a circle. The leader begins by yelling “Yee-haw” and swinging their left or right. From there, the person can choose to keep the Yee-Haw going or “Hey Barn”, which reverses the direction of play.
    </string>
    <string name="rose_login_below">Use the button below to login using your Rose-Hulman credentials</string>
    <string name="reg_token">1b46204c-449e-43b9-984f-b019b474082d</string>
    <string name="logout">Log Out</string>
    <string name="details">Details : %1$s</string>
    <string name="type">Event Type: %1$s</string>
    <string name="suggestion_submitted">Suggestion Submitted! Thanks!</string>
    <string name="suggestion_denied">Suggestions should not be empty</string>
    <string name="bad_date_error">Date formatting is incorrect</string>
    <string name="already_attending_error">Attendee already noted</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_hint">Write a message to send</string>
    <string name="send">Send</string>
    <string name="bluetooth_message">Received messages will show up here</string>
    <string name="receive">Receive</string>
    <string name="bluetooth_title">Connect</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="Not_admin">Please ask an officer or admin to do this for you</string>
    <string name="name_here">Rose Username Here</string>

</resources>
