<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/meeting_c_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/meeting_c_title"
        android:textStyle="bold"
        android:textColor="@color/dark_text"
        android:textSize="40sp"/>
    <TextView
        android:id="@+id/meeting_c_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meeting_c_title"
        android:text="@string/members_c_present"
        android:textSize="20sp"
        android:textColor="@color/dark_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meeting_c_present"
        android:text="@string/meeting_c_games"
        android:textSize="20sp"
        android:textColor="@color/dark_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />

</RelativeLayout>