<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.rosehulman.improse.myapplication.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_meetings"
        android:name="edu.rosehulman.improse.myapplication.MeetingFragment"
        android:label="@string/meeting_records"
        tools:layout="@layout/fragment_meeting_records" />

    <fragment
        android:id="@+id/nav_games"
        android:name="edu.rosehulman.improse.myapplication.GamesFragment"
        android:label="@string/view_stats"
        tools:layout="@layout/fragment_view_games"/>


    <fragment
        android:id="@+id/nav_stats"
        android:name="edu.rosehulman.improse.myapplication.StatsFragment"
        android:label="@string/view_stats"
        tools:layout="@layout/fragment_statistics"/>







</navigation>