<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/suggestions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/suggestions_title"
        android:textStyle="bold"
        android:textColor="@color/dark_text"
        android:textSize="40sp"/>
    <TextView
        android:id="@+id/suggestions_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggestions_title"
        android:text="@string/suggestions_help"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/dark_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/suggestions_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggestions_help"
        android:layout_above="@id/suggestions_submit"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/suggestions_hint"
        android:background="@drawable/background"
        android:textAlignment="gravity"
        android:gravity="top"
        />

    <Button
        android:id="@+id/suggestions_submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/suggestions_submit"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />

</RelativeLayout>