<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/school_color"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/school"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_alignParentTop="true"
        android:id="@+id/school_text"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/dark_text"
        />


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-20dp"
        android:scaleX=".8"
        android:scaleY=".8"
        app:srcCompat="@drawable/improse_logo" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/slight_grey"
        android:layout_below="@id/logo_image"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:hint="@string/username"
        android:id="@+id/username_field"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/slight_grey"
        android:layout_below="@id/username_field"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:hint="@string/password"
        android:id="@+id/password_field"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>